--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
               <span class="chip text-xs rounded-full px-2 py-1">Python</span>
               <span class="chip text-xs rounded-full px-2 py-1">JSON</span>
               <span class="chip text-xs rounded-full px-2 py-1">UI/UX</span>
+              <div>
+                <a class="border border-slate-300 rounded-lg px-3 py-2 text-sm hover:bg-slate-50"
+                  href="https://dbt-daily-journal-foltz2.streamlit.app/"target="_blank" rel="noopener noreferrer">Link to Demo</a>
+              </div>
             </div>
           </div>
         </article>
