--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
           <i class="bi bi-stars"></i> Software Development • Data Analytics • Technical Operations
         </span>
         <h1 class="text-4xl sm:text-5xl font-extrabold mt-4">
-          A Full-Stack Developer with a foundation in systems and data.
+          A Dependable Professional with Strong Analytical, Technical, and Administrative Skills.
         </h1>
         <p class="mt-4 text-slate-700 leading-relaxed">
-         I’m Tim, and I thrive on solving problems—whether it was keeping Apache helicopters mission-ready in the Army, troubleshooting software, or finding insights hidden in messy datasets. With 17 years of high-stakes experience in military aviation, I bring discipline, precision, and the ability to stay calm under pressure into everything I do. I’ve transitioned from wrenching on multimillion-dollar helicopters to coding full-stack applications and analyzing data to drive business decisions.<br><br>
+I’m Tim, and I thrive on solving problems, whether it was keeping Apache helicopters mission-ready in the Army, troubleshooting software, or finding insights hidden in messy datasets. With 17 years of high-stakes experience in military and civilian aviation, I bring discipline, precision, and the ability to stay calm under pressure into everything I do. I’ve transitioned from wrenching on multimillion-dollar helicopters to coding full-stack applications and analyzing data to drive business decisions.<br><br>
 
-        But I’m more than my work history. I’m a lifelong learner who loves building things—apps, data visualizations, and even intricate Excel sheets that make life easier. Outside of tech, I’m a husband, dad, and family-first person who values the people closest to me above all else. I recharge by hiking Arizona trails, hitting the gym, camping under the stars, and yes—dancing (because life should be fun).<br><br>
-        I believe in blending professionalism with personality. I want any team I join to know they’re not just getting a reliable problem-solver—they’re getting someone who shows up with curiosity, resilience, and a sense of humor.
-        </p>
-         <p class="mt-4 text-slate-700 leading-relaxed">
-          When I'm not coding or analyzing data, I'm family-first, usually with <span style="color: #8400ff; "><strong>purple</strong></span> hair—who loves gaming, Harry Potter, hiking, camping, and hitting the gym.
+But I’m more than my work history. I’m a lifelong learner who loves building things: apps, data visualizations, and even intricate Excel sheets that make life easier. Outside of tech, I’m a husband, dad, and family-first person who values the people closest to me above all else. I recharge by hiking Arizona trails, hitting the gym, camping under the stars, and yes, dancing, because life should be fun.<br><br>
+
+I believe in blending professionalism with personality. I want any team I join to know they’re not just getting a reliable problem-solver, but someone who shows up with curiosity, resilience, and a sense of humor.
+
+</p> <p class="mt-4 text-slate-700 leading-relaxed"> When I'm not coding or analyzing data, I'm family-first, usually with <span style="color: #8400ff;"><strong>purple</strong></span> hair, and I love gaming, Harry Potter, hiking, camping, and hitting the gym.
         </p>
         <div class="flex flex-wrap gap-3 mt-6">
           <a href="#projects" class="btn-grad text-white font-bold px-5 py-3 rounded-lg shadow-md hover:brightness-105">
