--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ I believe in blending professionalism with personality. I want any team I join t
             </div>
             <div class="mt-4 flex gap-2 flex-wrap">
               <a class="border border-slate-300 rounded-lg px-3 py-2 text-sm hover:bg-slate-50"
-                 href="https://docs.google.com/spreadsheets/d/1Yqj9JgHTt5inD6AEvESsb7O7t0jY2H1VLbdqpBc4B6E/edit?usp=sharing"target="_blank" rel="noopener noreferrer">Link to Google Sheets</a>
+                 href="https://docs.google.com/spreadsheets/d/1jsiqFyrrMytA7E61dTeHRpZetS8AcauT/copy?gid=916884987#gid=916884987"target="_blank" rel="noopener noreferrer">Link to Google Sheets</a>
             </div>
           </div>
         </article>
