--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <i class="bi bi-stars"></i> Software Development • Data Analytics • Technical Operations
         </span>
         <h1 class="text-4xl sm:text-5xl font-extrabold mt-4">
-          A Dependable Professional with Strong Analytical, Technical, and Administrative Skills.
+          A Full-Stack Developer with a foundation in systems and data.
         </h1>
         <p class="mt-4 text-slate-700 leading-relaxed">
 I’m Tim, and I thrive on solving problems, whether it was keeping Apache helicopters mission-ready in the Army, troubleshooting software, or finding insights hidden in messy datasets. With 17 years of high-stakes experience in military and civilian aviation, I bring discipline, precision, and the ability to stay calm under pressure into everything I do. I’ve transitioned from wrenching on multimillion-dollar helicopters to coding full-stack applications and analyzing data to drive business decisions.<br><br>
@@ -237,7 +237,7 @@ I believe in blending professionalism with personality. I want any team I join t
             </div>
             <div class="mt-4 flex gap-2 flex-wrap">
               <a class="border border-slate-300 rounded-lg px-3 py-2 text-sm hover:bg-slate-50"
-                 href="https://docs.google.com/spreadsheets/d/1jsiqFyrrMytA7E61dTeHRpZetS8AcauT/copy?gid=916884987#gid=916884987"target="_blank" rel="noopener noreferrer">Link to Google Sheets</a>
+                 href="https://docs.google.com/spreadsheets/d/1Yqj9JgHTt5inD6AEvESsb7O7t0jY2H1VLbdqpBc4B6E/edit?usp=sharing"target="_blank" rel="noopener noreferrer">Link to Google Sheets</a>
             </div>
           </div>
         </article>
@@ -292,11 +292,68 @@ I believe in blending professionalism with personality. I want any team I join t
         </div>
       </div>
        <div class="mt-6 text-center">
-            <!-- <a class="inline-block border border-slate-300 rounded-lg px-4 py-2 hover:bg-slate-50"
-               href="assets/T_Foltz_AA.pdf" target="_blank" rel="noopener"><i class="bi bi-download mr-2"></i> Download Full Resume (PDF)</a> -->
         </div>
     </div>
   </section>
+  <section id="education" class="py-12">
+  <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-extrabold mb-8">Education</h2>
+
+    <div class="relative border-l-2 border-slate-200 pl-8">
+      
+      <div class="mb-8">
+        <div class="absolute -left-[9px] w-4 h-4 rounded-full"
+             style="background: linear-gradient(90deg, #8A2BE2, #00CED1); top: 0.25rem;"></div>
+        <h4 class="font-bold text-lg">Bachelor of Science in Applied Computing</h4>
+        <p class="font-semibold text-slate-700">Arizona State University — Dec 2024</p>
+        <p class="mt-1 text-slate-600 text-sm">GPA: 3.5</p>
+        <p class="mt-2 text-slate-700">
+          Coursework included Data Science, Database Management, Cloud Computing, Software Engineering, 
+          Operating Systems, and Cybersecurity. Strong foundation in Python, R, SQL, and Excel 
+          for analytics, along with systems design and applied project work.
+        </p>
+      </div>
+
+      <div class="mb-8">
+        <div class="absolute -left-[9px] w-4 h-4 rounded-full"
+             style="background: linear-gradient(90deg, #8A2BE2, #00CED1); top: 0.25rem;"></div>
+        <h4 class="font-bold text-lg">Associate of Arts</h4>
+        <p class="font-semibold text-slate-700">Glendale Community College — May 2022</p>
+        <p class="mt-1 text-slate-600 text-sm">GPA: 3.8</p>
+        <p class="mt-2 text-slate-700">
+          Completed foundation courses in Computer Science, Economics, and Accounting. 
+          Gained skills in Java, C++, and database fundamentals while balancing rigorous coursework 
+          in both computing and business disciplines.
+        </p>
+      </div>
+
+      <div class="mb-8">
+        <div class="absolute -left-[9px] w-4 h-4 rounded-full"
+             style="background: linear-gradient(90deg, #8A2BE2, #00CED1); top: 0.25rem;"></div>
+        <h4 class="font-bold text-lg">Full-Stack Software Development Bootcamp</h4>
+        <p class="font-semibold text-slate-700">Coding Dojo</p>
+        <p class="mt-2 text-slate-700">
+          Completed intensive training across three stacks: MERN (MongoDB, Express, React, Node.js), 
+          Python/Django, and Java/Spring Boot. Built and deployed full-stack applications with AWS integration, 
+          agile team collaboration, and UI/UX best practices.
+        </p>
+      </div>
+
+      <div class="mb-8">
+        <div class="absolute -left-[9px] w-4 h-4 rounded-full"
+             style="background: linear-gradient(90deg, #8A2BE2, #00CED1); top: 0.25rem;"></div>
+        <h4 class="font-bold text-lg">Google Career Certificate in Data Analytics</h4>
+        <p class="font-semibold text-slate-700">Coursera</p>
+        <p class="mt-2 text-slate-700">
+          Training in data cleaning, analysis, and visualization using R, SQL, Excel, and Tableau. 
+          Coursework emphasizes real-world case studies, exploratory data analysis, and dashboard creation.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
 
   <section id="contact" class="py-12">
