--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ I believe in blending professionalism with personality. I want any team I join t
         <p class="mt-1 text-slate-600 text-sm">GPA: 3.5</p>
         <p class="mt-2 text-slate-700">
           Coursework included Data Science, Database Management, Cloud Computing, Software Engineering, 
-          Operating Systems, and Cybersecurity. Strong foundation in Python, R, SQL, and Excel 
+          Operating Systems and Cybersecurity. Strong foundation in Python, R, SQL, and Excel 
           for analytics, along with systems design and applied project work.
         </p>
       </div>
@@ -318,7 +318,7 @@ I believe in blending professionalism with personality. I want any team I join t
         <div class="absolute -left-[9px] w-4 h-4 rounded-full"
              style="background: linear-gradient(90deg, #8A2BE2, #00CED1); top: 0.25rem;"></div>
         <h4 class="font-bold text-lg">Associate of Arts</h4>
-        <p class="font-semibold text-slate-700">Glendale Community College — May 2022</p>
+        <p class="font-semibold text-slate-700">Glendale Community College — Dec 2022</p>
         <p class="mt-1 text-slate-600 text-sm">GPA: 3.8</p>
         <p class="mt-2 text-slate-700">
           Completed foundation courses in Computer Science, Economics, and Accounting. 
