--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ I believe in blending professionalism with personality. I want any team I join t
       <h2 class="text-3xl font-extrabold mb-3">Get in Touch</h2>
       <p class="text-slate-700 mb-6">Have a role or project you think I’d be a great fit for? Let’s chat.</p>
       <div class="rounded-2xl p-6 bg-white border border-slate-200 shadow-card">
-        <form action="https://formsubmit.co/tjfoltz2@gmail.com" method="POST" class="grid md:grid-cols-2 gap-4">
+        <form action="https://formsubmit.co/d61562044654485bb8e8e714ed84aef3" method="POST" class="grid md:grid-cols-2 gap-4">
           <input type="hidden" name="_captcha" value="false">
           <div>
             <label class="text-slate-600 text-sm block mb-1">Name</label>
@@ -389,7 +389,6 @@ I believe in blending professionalism with personality. I want any team I join t
     <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center justify-between gap-3 text-slate-600 text-sm">
       <p>© <span id="year"></span> Tim Foltz</p>
       <div class="flex items-center gap-4">
-        <a class="hover:text-brand-primary" href="mailto:tjfoltz2@gmail.com"><i class="bi bi-envelope"></i></a>
         <a class="hover:text-brand-primary" href="https://www.linkedin.com/in/timothy-j-foltz/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
         <a class="hover:text-brand-primary" href="https://github.com/tjf2015" target="_blank" rel="noopener"><i class="bi bi-github"></i></a>
       </div>
