--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           </div>
           <div class="mt-4 flex gap-2 flex-wrap">
             <a class="border border-brand-secondary text-brand-secondary rounded-lg px-3 py-2 text-sm hover:bg-white hover:border-ink hover:text-ink dark:hover:bg-white dark:hover:border-ink dark:hover:text-ink"
-               href="https://docs.google.com/spreadsheets/d/1Yqj9JgHTt5inD6AEvESsb7O7t0jY2H1VLbdqpBc4B6E/copy" target="_blank" rel="noopener noreferrer">Link to Google Sheets</a>
+               href="https://tjf2015.github.io/DBT card Template.xlsx" target="_blank" rel="noopener noreferrer">Download Excel Workbook</a>
           </div>
         </div>
       </article>
