--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               secondary: '#FF6A00',  // Orange
               accent: '#22C55E',    // Green (NEW)
             },
-            ink: '#1e293b', // Dark text for light mode
+            ink: '##bcc3cc', // Dark text for light mode
             soft: '#f8fafc' // Light text for dark mode
           },
           boxShadow: {
@@ -216,13 +216,13 @@
         <h1 class="text-4xl sm:text-5xl font-extrabold mt-4 dark:text-white">
           A Full-Stack Developer with a foundation in systems and data.
         </h1>
-        <p class="mt-4 text-slate-700 leading-relaxed">
+        <p class="mt-4 text-slate-700 dark:text-white leading-relaxed">
          I’m Tim, and I thrive on solving problems—whether it was keeping Apache helicopters mission-ready in the Army, troubleshooting software, or finding insights hidden in messy datasets. With 17 years of high-stakes experience in military and civilian aviation, I bring discipline, precision, and the ability to stay calm under pressure into everything I do. I’ve transitioned from wrenching on multimillion-dollar helicopters to coding full-stack applications and analyzing data to drive business decisions.<br><br>
 
         But I’m more than my work history. I’m a lifelong learner who loves building things—apps, data visualizations, and even intricate Excel sheets that make life easier. Outside of tech, I’m a husband, dad, and family-first person who values the people closest to me above all else. I recharge by hiking Arizona trails, hitting the gym, camping under the stars, and yes—dancing (because life should be fun).<br><br>
         I believe in blending professionalism with personality. I want any team I join to know they’re not just getting a reliable problem-solver—they’re getting someone who shows up with curiosity, resilience, and a sense of humor.
         </p>
-         <p class="mt-4 text-slate-700 leading-relaxed">
+         <p class="mt-4 text-slate-700 dark:text-white leading-relaxed">
           When I'm not coding or analyzing data, I'm family-first, usually with <span style="color: #8400ff; "><strong>purple</strong></span> hair—who loves gaming, Harry Potter, hiking, camping, and hitting the gym.
         </p>
         <div class="flex flex-wrap gap-3 mt-6">
@@ -436,7 +436,7 @@
   <section id="contact" class="py-12">
     <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl font-extrabold mb-3">Get in Touch</h2>
-      <p class="text-slate-700 mb-6">Have a role or project you think I’d be a great fit for? Let’s chat.</p>
+      <p class="text-slate-700 dark:text-white mb-6">Have a role or project you think I’d be a great fit for? Let’s chat.</p>
       <div class="rounded-2xl p-6 bg-white border border-slate-200 shadow-card">
         <form action="https://formsubmit.co/tjfoltz2@gmail.com" method="POST" class="grid md:grid-cols-2 gap-4">
           <input type="hidden" name="_captcha" value="false">
