--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         I believe in blending professionalism with personality. I want any team I join to know they’re not just getting a reliable problem-solver—they’re getting someone who shows up with curiosity, resilience, and a sense of humor.
         </p>
          <p class="mt-4 text-slate-700 dark:text-white leading-relaxed">
-          When I'm not coding or analyzing data, I'm family-first, usually with a range of <span class="myriad"><strong>color</strong></span>  - who loves gaming, Harry Potter, hiking, camping, and hitting the gym.
+          When I'm not coding or analyzing data, I'm family-first, with <span class="myriad"><strong>colored</strong></span> hair  - who loves gaming, Harry Potter, hiking, camping, and hitting the gym.
         </p>
         <div class="flex flex-wrap gap-3 mt-6">
           <a href="#projects" class="btn-quirk text-white font-bold px-5 py-3 rounded-lg shadow-md hover:brightness-105">
