--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <i class="bi bi-stars"></i> Software Development • Data Analytics • Technical Operations
         </span>
         <h1 class="text-4xl sm:text-5xl font-extrabold mt-4 dark:text-white">
-          A Full-Stack Developer with a foundation in systems and data.
+          A detail-oriented professional with a foundation in systems, data, and software development.
         </h1>
         <p class="mt-4 text-slate-700 dark:text-white leading-relaxed">
          I’m Tim, and I thrive on solving problems—whether it was keeping Apache helicopters mission-ready in the Army, troubleshooting software, or finding insights hidden in messy datasets. With 17 years of high-stakes experience in military and civilian aviation, I bring discipline, precision, and the ability to stay calm under pressure into everything I do. I’ve transitioned from wrenching on multimillion-dollar helicopters to coding full-stack applications and analyzing data to drive business decisions.<br><br>
