--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="hero-blob" aria-hidden="true"></div>
       <div class="lg:col-span-7">
         <span class="inline-flex items-center gap-2 text-sm font-semibold bg-brand-primary/10 text-brand-primary border border-brand-primary/20 px-3 py-1 rounded-full">
-          <i class="bi bi-stars"></i> Software Development • Data Analytics • Technical Operations
+          <i class="bi bi-stars"></i> Administration • Data Analytics • Technical Operations • Data Integrity
         </span>
         <h1 class="text-4xl sm:text-5xl font-extrabold mt-4 dark:text-white">
           A detail-oriented professional with a foundation in systems, data, and software development.
